# e5vosdo-snimrod

./: .dockerignore  .env copy  .env.example  .eslintrc.js  .gitignore  .prettierrc  App.js  Dockerfile  README-EN.md  README.md  SECURITY.md  app.json  auth.ts  docker-compose.yml  e5-sn.session.sql  ecosystem.config.js  foci.json  index.js  menu_pipeline.py  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  postcss.config.js  proxy.ts  pyproject.toml  requirements.txt  settings.json  setup_db.py  setup_dotenv.py  setup_project.py  tailwind.config.js  tanarok.json  teachers.json  tickets.txt  timetable.json  tmp.txt  tsconfig.json  turbo.json  (+2 more)
.github/: CODEOWNERS
actions/: route.ts
api/: index.py
app/: layout.tsx  loadCacheMethod.tsx  mainLayoutWithLogLoginProp.tsx  not-found.tsx  ogurl.ts  ogurl.tsx  page.tsx  providers.tsx  runClientSide.tsx  skipMessenger.tsx
components/: FontAwesomeConfig.tsx  Input.tsx  LogOut.tsx  LoginButton.tsx  LoginForm.tsx  PasswordGate.tsx  PodcastDrop.tsx  SnowfallOverlay.tsx  alert.tsx  chips.tsx  cookie.tsx  countdown.tsx  events.tsx  flipcard.tsx  footer.tsx  freeRooms.tsx  icons.tsx  infocard.tsx  myanalytics.tsx  navbar.tsx  pagenav.tsx  pagesettings.tsx  pagewarning.tsx  popupbutton.tsx  popupcard.tsx  popupcards.tsx  profileicon.tsx  push.tsx  roomchanges.tsx  searchUser.tsx  section.tsx  sidecard.tsx  sportresults.tsx  sporttable.tsx  test.tsx  theme-switch.tsx  themePicker.tsx  tray.tsx  welcomecard.tsx
config/: events.ts  events.tsx  fonts.ts  groups.ts  mediaPreview.ts  roomchanges.ts  site.ts  (+1 more)
(+750 files in other folders)
