[project]
name = "e5vosdo-snimrod"
version = "0.1.0"
description = "Modern webapplikáció az Eötvös József Gimnázium Diákönkormányzatának"
authors = [
    {name = "copilot-swe-agent[bot]",email = "198982749+Copilot@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "mysql-connector-python (>=9.6.0,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pandas (<3.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "py-vapid (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
